LU-1496 ptlrpc: prolong rw locks even IO RPCs are finished

Refresh rw lock again after IO RPCs are finished to leave a time
window for clients to cancel covering dlm locks.

This is a part of LU-874 back port.

Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Change-Id: I5cd185870e601a66bce21b3cc3c91f5f800b4c27
Reviewed-on: http://review.whamcloud.com/3157
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@whamcloud.com>
Reviewed-by: Fan Yong <yong.fan@whamcloud.com>
Reviewed-by: Johann Lombardi <johann@whamcloud.com>